--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^6.8.0",
     "eslint-config-alloy": "^3.5.0",
     "lerna": "^3.18.3",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
   "dependencies": {
