--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "clean": "rm -rf node_modules && lerna clean",
     "bootstrap": "yarn && lerna bootstrap",
-    "build": "leran run build"
+    "build": "leran run build",
+    "run:ttjj": "cd packages/fund-ttjj && yarn run build && node src/index.js"
   },
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
