feat: 增加 cli-core 模块；增加 cli 模块，功能待定

--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["packages/*"],
+  "packages": ["packages/cli", "packages/cli-core"],
   "version": "independent",
   "npmClient": "yarn",
   "yes": true
