--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@types/fs-extra": "^8.1.0",
     "@types/jsonp": "^0.2.0",
+    "@types/minimist": "^1.2.0",
+    "@types/resolve": "^1.14.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "eslint": "^6.8.0",
