--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "main": "src/index.js",
   "bin": {
-    "oishi": "bin/index.js"
+    "oishi": "bin/oishi.js"
   },
   "types": "typings/index.d.ts",
   "files": [
