--- a/packages/cli-core/package.json
+++ b/packages/cli-core/package.json
@@ -33,7 +33,8 @@
     "@oishi/fund-shared": "^0.0.9",
     "axios": "^0.19.2",
     "commander": "^4.1.1",
-    "resolve": "^1.15.1"
+    "resolve": "^1.15.1",
+    "tslib": "^1.11.1"
   },
   "gitHead": "8d02505c8deaead7bc7c75826b2d4d0cd137e277"
 }
