--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,7 +34,8 @@
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
     "@oishi/cli-core": "^0.0.10",
-    "envinfo": "^7.5.0"
+    "envinfo": "^7.5.0",
+    "tslib": "^1.11.1"
   },
   "gitHead": "8d02505c8deaead7bc7c75826b2d4d0cd137e277"
 }
