--- a/packages/fund-shared/package.json
+++ b/packages/fund-shared/package.json
@@ -33,6 +33,7 @@
     "chalk": "^3.0.0",
     "es6-error": "^4.1.1",
     "jsonp": "^0.2.1",
-    "query-string": "^6.11.0"
+    "query-string": "^6.11.0",
+    "tslib": "^1.11.1"
   }
 }
