--- a/packages/fund-ttjj/package.json
+++ b/packages/fund-ttjj/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@oishi/fund-shared": "^0.0.9",
     "fs-extra": "^8.1.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "tslib": "^1.11.1"
   }
 }
