--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "lerna": "^3.18.3",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
+  },
+  "dependencies": {
+    "@types/ramda": "^0.26.43"
   }
 }
