--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/fs-extra": "^8.1.0",
     "@types/jsonp": "^0.2.0",
     "@types/minimist": "^1.2.0",
+    "@types/ramda": "^0.26.43",
     "@types/resolve": "^1.14.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
@@ -21,8 +22,5 @@
     "lerna": "^3.18.3",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
-  },
-  "dependencies": {
-    "@types/ramda": "^0.26.43"
   }
 }
