--- a/packages/oishi-shared/package.json
+++ b/packages/oishi-shared/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@oishi/cli-crawler",
+  "name": "@oishi/oishi-shared",
   "version": "0.0.1",
-  "description": "cli 爬虫合集",
+  "description": "oishi 通用库",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
   "main": "src/index.js",
-  "bin": {
-    "oishi-crawler": "bin/oishi-crawler.js"
-  },
   "types": "typings/index.d.ts",
   "files": [
     "src",
@@ -33,8 +30,8 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "^0.0.17",
-    "tslib": "^1.11.1",
-    "@oishi/cli-crawler-plugin-ttjj": "0.0.1"
+    "axios": "^0.19.2",
+    "jsonp": "^0.2.1",
+    "query-string": "^6.11.1"
   }
 }
