--- a/packages/cli-crawler-plugin-ttjj/package.json
+++ b/packages/cli-crawler-plugin-ttjj/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oishi/cli-crawler-plugin-ttjj",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "cli-crawler 插件，天天基金",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
@@ -30,13 +30,13 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "devDependencies": {
-    "@oishi/cli-core": "^0.0.17"
+    "@oishi/cli-core": "^0.0.18"
   },
   "dependencies": {
+    "@oishi/oishi-shared": "^0.0.2",
     "fs-extra": "^8.1.0",
     "moment": "^2.24.0",
     "ramda": "^0.27.0",
-    "rxjs": "^6.5.4",
-    "@oishi/oishi-shared": "0.0.1"
+    "rxjs": "^6.5.4"
   }
 }
