feat: 整合共通代码

--- a/packages/cli-crawler/package.json
+++ b/packages/cli-crawler/package.json
@@ -36,5 +36,6 @@
     "@oishi/cli-core": "^0.0.18",
     "@oishi/cli-crawler-plugin-ttjj": "^0.0.3",
     "tslib": "^1.11.1"
-  }
+  },
+  "gitHead": "549eeca0974e7b3cf5dcb5aa212219c2f2487d1d"
 }
