--- a/packages/cli-crawler-plugin-ttjj/package.json
+++ b/packages/cli-crawler-plugin-ttjj/package.json
@@ -38,5 +38,6 @@
     "moment": "^2.24.0",
     "ramda": "^0.27.0",
     "rxjs": "^6.5.4"
-  }
+  },
+  "gitHead": "549eeca0974e7b3cf5dcb5aa212219c2f2487d1d"
 }
