fix: 给每个 package 增加 global.d.ts 文件

--- a/packages/cli-core/tsconfig.json
+++ b/packages/cli-core/tsconfig.json
@@ -6,5 +6,5 @@
     "declaration": true,
     "declarationDir": "./typings"
   },
-  "include": ["./core/**/*.ts", "../../global.d.ts"]
+  "include": ["./core/**/*.ts", "./global.d.ts"]
 }
