--- a/packages/oishi-shared/tsconfig.json
+++ b/packages/oishi-shared/tsconfig.json
@@ -6,5 +6,5 @@
     "declaration": true,
     "declarationDir": "./typings"
   },
-  "include": ["./core/**/*.ts", "../../global.d.ts"]
+  "include": ["./core/**/*.ts", "./global.d.ts"]
 }
