--- a/packages/cli-crawler/package.json
+++ b/packages/cli-crawler/package.json
@@ -34,9 +34,9 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "^0.0.19",
-    "@oishi/cli-crawler-plugin-ttjj": "^0.0.5",
+    "@oishi/cli-core": "latest",
+    "@oishi/cli-crawler-plugin-ttjj": "latest",
     "tslib": "^1.11.1"
   },
-  "gitHead": "549eeca0974e7b3cf5dcb5aa212219c2f2487d1d"
+  "gitHead": "1db5b86b5560cb8a926ce2056fc4867fc394951a"
 }
