--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,9 +34,9 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "^0.0.11",
+    "@oishi/cli-core": "latest",
     "envinfo": "^7.5.0",
     "tslib": "^1.11.1"
   },
-  "gitHead": "8d02505c8deaead7bc7c75826b2d4d0cd137e277"
+  "gitHead": "1db5b86b5560cb8a926ce2056fc4867fc394951a"
 }
