--- a/packages/oishi-shared/package.json
+++ b/packages/oishi-shared/package.json
@@ -34,5 +34,6 @@
     "axios": "^0.19.2",
     "jsonp": "^0.2.1",
     "query-string": "^6.11.1"
-  }
+  },
+  "gitHead": "1db5b86b5560cb8a926ce2056fc4867fc394951a"
 }
