--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "packages": [
     "packages/cli",
+    "packages/cli-core",
     "packages/cli-crawler",
     "packages/cli-crawler-plugin-ttjj",
     "packages/oishi-shared"
