--- a/packages/cli-crawler-plugin-ttjj/package.json
+++ b/packages/cli-crawler-plugin-ttjj/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "devDependencies": {
-    "@oishi/cli-core": "latest"
+    "@oishi/cli-core": "^0.0.22"
   },
   "dependencies": {
     "@oishi/oishi-shared": "latest",
