--- a/packages/cli-crawler/package.json
+++ b/packages/cli-crawler/package.json
@@ -34,8 +34,8 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "latest",
-    "@oishi/cli-crawler-plugin-ttjj": "latest",
+    "@oishi/cli-core": "^0.0.22",
+    "@oishi/cli-crawler-plugin-ttjj": "^0.0.5",
     "tslib": "^1.11.1"
   },
   "gitHead": "1db5b86b5560cb8a926ce2056fc4867fc394951a"
