--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "latest",
+    "@oishi/cli-core": "0.0.22",
     "envinfo": "^7.5.0",
     "tslib": "^1.11.1"
   },
