--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oishi/cli",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "cli 脚本，暂时没想好用来做什么，基于 @oishi/cli-core，暂时只有 info 指令",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "0.0.22",
+    "@oishi/cli-core": "^0.0.23",
     "envinfo": "^7.5.0",
     "tslib": "^1.11.1"
   },
