--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/minimist": "^1.2.0",
     "@types/ramda": "^0.26.43",
     "@types/resolve": "^1.14.0",
+    "@types/validate-npm-package-name": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "eslint": "^6.8.0",
