--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@oishi/cli",
   "version": "0.0.9",
-  "description": "cli 脚本，暂时没想好用来做什么，基于 @oishi/cli-core，暂时只有 info 指令",
+  "description": "oishi -h || oishi <command> -h",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
@@ -34,9 +34,13 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "^0.0.23",
+    "@oishi/cli-core": "^0.0.28",
     "envinfo": "^7.5.0",
-    "tslib": "^1.11.1"
+    "execa": "^4.0.0",
+    "fs-extra": "^8.1.0",
+    "ramda": "^0.27.0",
+    "tslib": "^1.11.1",
+    "validate-npm-package-name": "^3.0.0"
   },
   "gitHead": "1db5b86b5560cb8a926ce2056fc4867fc394951a"
 }
