feat: 添加 oishi tpl:oishi-plg <command> 快速创建 plugin 的方法

--- a/packages/cli/templates/tpl:typescript/package.json
+++ b/packages/cli/templates/tpl:typescript/package.json
@@ -14,7 +14,7 @@
     "README.md"
   ],
   "scripts": {
-    "build:ts": "rm -rf ./src ./typings && npx tsc --project ./",
+    "build:ts": "rm -rf ./src ./typings && tsc --project ./",
     "prepublish": "npm run build:ts"
   },
   "dependencies": {
