fix: 更改 package.json,对于 cli 的库不需要 typings,对于结果为库的库,需要更改 typings 依赖为 dep

--- a/lerna.json
+++ b/lerna.json
@@ -3,8 +3,8 @@
     "packages/cli",
     "packages/cli-core",
     "packages/cli-crawler",
-    "packages/cli-crawler-plugin-ttjj",
-    "packages/oishi-shared"
+    "packages/oishi-shared",
+    "packages/cli-shared"
   ],
   "version": "independent",
   "npmClient": "yarn",
