--- a/packages/cli-core/package.json
+++ b/packages/cli-core/package.json
@@ -31,9 +31,10 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "chalk": "^3.0.0",
+    "@types/resolve": "^1.14.0",
+    "chalk": "^4.0.0",
     "commander": "^4.1.1",
-    "resolve": "^1.15.1",
+    "resolve": "^1.17.0",
     "tslib": "^1.11.1"
   },
   "gitHead": "1db5b86b5560cb8a926ce2056fc4867fc394951a"
