--- a/packages/cli-crawler-plugin-ttjj/package.json
+++ b/packages/cli-crawler-plugin-ttjj/package.json
@@ -34,7 +34,7 @@
     "@oishi/cli-core": "^0.0.23"
   },
   "dependencies": {
-    "@oishi/oishi-shared": "^0.0.4",
+    "@oishi/oishi-shared": "0.0.4",
     "fs-extra": "^8.1.0",
     "moment": "^2.24.0",
     "ramda": "^0.27.0",
