--- a/packages/cli-shared/package.json
+++ b/packages/cli-shared/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "@oishi/cli-crawler",
-  "version": "0.0.8",
-  "description": "cli 爬虫合集",
+  "name": "@oishi/cli-shared",
+  "version": "0.0.1",
+  "description": "cli shared",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
-  "main": "",
-  "bin": {
-    "oishi-crawler": "bin/oishi-crawler.js",
-    "@oishi/cli-crawler": "bin/oishi-crawler.js"
-  },
-  "types": "",
+  "main": "src/index.js",
+  "types": "typings/index.d.ts",
   "files": [
-    "bin",
     "src",
     "package.json",
+    "typings",
+    "global.d.ts",
     "README.md"
   ],
   "publishConfig": {
@@ -25,7 +22,7 @@
     "url": "git+https://github.com/jsjzh/oishi.git"
   },
   "scripts": {
-    "build:ts": "rm -rf ./src && ../../node_modules/.bin/tsc --project ./",
+    "build:ts": "rm -rf ./src ./typings && ../../node_modules/.bin/tsc --project ./",
     "prepublish": "npm run build:ts",
     "build": "npm run prepublish"
   },
@@ -34,9 +31,6 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "^0.0.33",
-    "@oishi/cli-crawler-plugin-ttjj": "^0.0.6",
-    "tslib": "^1.11.1"
-  },
-  "gitHead": "1db5b86b5560cb8a926ce2056fc4867fc394951a"
+    "execa": "^4.0.0"
+  }
 }
