--- a/packages/oishi-shared/package.json
+++ b/packages/oishi-shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oishi/oishi-shared",
-  "version": "0.0.4",
+  "version": "0.0.7",
   "description": "oishi 通用库",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
@@ -31,9 +31,10 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "axios": "^0.19.2",
-    "jsonp": "^0.2.1",
-    "query-string": "^6.11.1"
+    "@types/lodash": "^4.14.150",
+    "@types/request": "^2.48.4",
+    "lodash": "^4.17.15",
+    "request": "^2.88.2"
   },
   "gitHead": "1db5b86b5560cb8a926ce2056fc4867fc394951a"
 }
