--- a/packages/cli-shared/package.json
+++ b/packages/cli-shared/package.json
@@ -32,5 +32,6 @@
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
     "execa": "^4.0.0"
-  }
+  },
+  "gitHead": "b890bbda9456350293882391ec7f0a4250536808"
 }
