--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-json": "^4.0.3",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "eslint": "^6.8.0",
     "eslint-config-alloy": "^3.7.1",
     "lerna": "^3.20.2",
+    "rollup": "^2.7.5",
+    "rollup-plugin-filesize": "^7.0.0",
+    "rollup-plugin-progress": "^1.1.1",
+    "rollup-plugin-terser": "^5.3.0",
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3"
   }
