--- a/packages/cli-core/tsconfig.json
+++ b/packages/cli-core/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./src",
     "rootDir": "./core",
     "declaration": true,
     "declarationDir": "./typings"
   },
-  "include": ["./core/**/*.ts", "./global.d.ts"]
+  "include": ["./core/**/*.ts"]
 }
