--- a/packages/cli-core/package.json
+++ b/packages/cli-core/package.json
@@ -34,8 +34,12 @@
     "@types/resolve": "^1.14.0",
     "chalk": "^4.0.0",
     "commander": "^4.1.1",
+    "fs-extra": "^9.0.0",
     "resolve": "^1.17.0",
     "tslib": "^1.11.1"
   },
-  "gitHead": "b890bbda9456350293882391ec7f0a4250536808"
+  "gitHead": "b890bbda9456350293882391ec7f0a4250536808",
+  "devDependencies": {
+    "@types/fs-extra": "^8.1.0"
+  }
 }
