--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,7 +13,7 @@
   "types": "",
   "files": [
     "bin",
-    "src",
+    "lib",
     "package.json",
     "README.md"
   ],
@@ -26,15 +26,16 @@
   },
   "scripts": {
     "build:ts": "rm -rf ./src && ../../node_modules/.bin/tsc --project ./",
+    "build:rollup": "rm -rf ./lib && ../../node_modules/.bin/rollup --config rollup.config.js",
     "prepublish": "npm run build",
-    "build": "npm run build:ts"
+    "build": "npm run build:ts && npm run build:rollup"
   },
   "bugs": {
     "url": "https://github.com/jsjzh/oishi/issues"
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "^0.0.35",
+    "@oishi/cli-core": "^0.0.36",
     "execa": "^4.0.0",
     "fs-extra": "^9.0.0",
     "ramda": "^0.27.0",
