--- a/packages/cli-crawler/package.json
+++ b/packages/cli-crawler/package.json
@@ -13,7 +13,7 @@
   "types": "",
   "files": [
     "bin",
-    "src",
+    "lib",
     "package.json",
     "README.md"
   ],
@@ -26,15 +26,16 @@
   },
   "scripts": {
     "build:ts": "rm -rf ./src && ../../node_modules/.bin/tsc --project ./",
-    "prepublish": "npm run build:ts",
-    "build": "npm run prepublish"
+    "build:rollup": "rm -rf ./lib && ../../node_modules/.bin/rollup --config rollup.config.js",
+    "prepublish": "npm run build",
+    "build": "npm run build:ts && npm run build:rollup"
   },
   "bugs": {
     "url": "https://github.com/jsjzh/oishi/issues"
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "^0.0.35",
+    "@oishi/cli-core": "^0.0.38",
     "tslib": "^1.11.1"
   },
   "gitHead": "df6127be6a60588ad15faaf6dd6a8b9d6a9c4588"
