--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,8 +36,11 @@
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
     "@oishi/cli-core": "^0.0.38",
+    "@oishi/cli-shared": "^0.0.7",
+    "@yarnpkg/lockfile": "^1.1.0",
     "execa": "^4.0.0",
     "fs-extra": "^9.0.0",
+    "parse-package-name": "^0.1.0",
     "ramda": "^0.27.0",
     "tslib": "^1.11.1",
     "validate-npm-package-name": "^3.0.0"
