--- a/packages/cli-core/package.json
+++ b/packages/cli-core/package.json
@@ -35,6 +35,7 @@
     "chalk": "^4.0.0",
     "commander": "^4.1.1",
     "fs-extra": "^9.0.0",
+    "leven": "^3.1.0",
     "resolve": "^1.17.0",
     "tslib": "^1.11.1"
   },
