--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,6 @@
-**/node_modules/
-**/lib/
-**/dist/
-**/typings/
-**/test/
-**/src/
+**/node_modules/*
+**/lib/*
+**/dist/*
+**/typings/*
+**/test/*
+**/src/*
