--- a/packages/cli-core/package.json
+++ b/packages/cli-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oishi/cli-core",
-  "version": "0.0.39",
+  "version": "0.0.41",
   "description": "创建脚本命令底层框架",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
@@ -9,8 +9,8 @@
   "types": "typings/index.d.ts",
   "files": [
     "lib",
-    "package.json",
     "typings",
+    "package.json",
     "README.md"
   ],
   "publishConfig": {
@@ -21,8 +21,8 @@
     "url": "git+https://github.com/jsjzh/oishi.git"
   },
   "scripts": {
-    "build:ts": "rm -rf ./src ./typings && ../../node_modules/.bin/tsc --project ./",
-    "build:rollup": "rm -rf ./lib && ../../node_modules/.bin/rollup --config rollup.config.js",
+    "build:ts": "rm -rf ./src ./typings && npx tsc --project ./",
+    "build:rollup": "rm -rf ./lib && npx rollup --config rollup.config.js",
     "prepublish": "npm run build",
     "build": "npm run build:ts && npm run build:rollup"
   },
@@ -31,13 +31,13 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@types/resolve": "^1.14.0",
+    "@types/resolve": "^1.17.1",
     "chalk": "^4.0.0",
     "commander": "^4.1.1",
     "fs-extra": "^9.0.0",
     "leven": "^3.1.0",
     "resolve": "^1.17.0",
-    "tslib": "^1.11.1"
+    "tslib": "^2.0.0"
   },
   "gitHead": "df6127be6a60588ad15faaf6dd6a8b9d6a9c4588",
   "devDependencies": {
