--- a/packages/oishi-shared/package.json
+++ b/packages/oishi-shared/package.json
@@ -9,8 +9,8 @@
   "types": "typings/index.d.ts",
   "files": [
     "lib",
-    "package.json",
     "typings",
+    "package.json",
     "README.md"
   ],
   "publishConfig": {
@@ -21,8 +21,8 @@
     "url": "git+https://github.com/jsjzh/oishi.git"
   },
   "scripts": {
-    "build:ts": "rm -rf ./src ./typings && ../../node_modules/.bin/tsc --project ./",
-    "build:rollup": "rm -rf ./lib && ../../node_modules/.bin/rollup --config rollup.config.js",
+    "build:ts": "rm -rf ./src ./typings && npx tsc --project ./",
+    "build:rollup": "rm -rf ./lib && npx rollup --config rollup.config.js",
     "prepublish": "npm run build",
     "build": "npm run build:ts && npm run build:rollup"
   },
@@ -34,7 +34,8 @@
     "@types/lodash": "^4.14.150",
     "@types/request": "^2.48.4",
     "lodash": "^4.17.15",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "tslib": "^2.0.0"
   },
   "gitHead": "df6127be6a60588ad15faaf6dd6a8b9d6a9c4588"
 }
