--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oishi/cli",
-  "version": "0.0.46",
+  "version": "0.0.47",
   "description": "oishi -h || oishi <command> -h",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
@@ -30,14 +30,14 @@
     "prepublish": "npm run build",
     "build": "npm run build:ts && npm run build:rollup",
     "test": "npm run test:parse-dep",
-    "test:parse-dep": "npm run prepublish && node bin/oishi.js parse:dep"
+    "test:parse-dep": "node bin/oishi.js parse:dep"
   },
   "bugs": {
     "url": "https://github.com/jsjzh/oishi/issues"
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "^0.0.42",
+    "@oishi/cli-core": "^0.0.44",
     "@oishi/cli-shared": "^0.0.8",
     "@yarnpkg/lockfile": "^1.1.0",
     "execa": "^4.0.0",
