--- a/packages/oishi-shared/package.json
+++ b/packages/oishi-shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oishi/oishi-shared",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "oishi 通用库",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
@@ -33,6 +33,8 @@
   "dependencies": {
     "@types/lodash": "^4.14.150",
     "@types/request": "^2.48.4",
+    "@types/fs-extra": "^9.0.1",
+    "fs-extra": "^9.0.0",
     "lodash": "^4.17.15",
     "request": "^2.88.2",
     "tslib": "^2.0.0"
