--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,7 @@
     /* Additional Checks */
     "noUnusedLocals": false,                   /* Report errors on unused locals. */
     "noUnusedParameters": false,               /* Report errors on unused parameters. */
-    "noImplicitReturns": true,                /* Report error when not all code paths in function return a value. */
+    "noImplicitReturns": false,                /* Report error when not all code paths in function return a value. */
     "noFallthroughCasesInSwitch": true,       /* Report errors for fallthrough cases in switch statement. */
 
     /* Module Resolution Options */
@@ -52,7 +52,7 @@
     // "types": [],                           /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true,     /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-    "preserveSymlinks": true,                 /* Do not resolve the real path of symlinks. */
+    // "preserveSymlinks": true,                 /* Do not resolve the real path of symlinks. */
     // "allowUmdGlobalAccess": true,          /* Allow accessing UMD globals from modules. */
 
     /* Source Map Options */
