--- a/packages/oishi-shared/package.json
+++ b/packages/oishi-shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oishi/oishi-shared",
-  "version": "0.0.18",
+  "version": "1.0.0",
   "description": "oishi 通用库",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
@@ -9,6 +9,7 @@
   "types": "typings/index.d.ts",
   "files": [
     "lib",
+    "src",
     "typings",
     "package.json",
     "README.md"
@@ -23,8 +24,8 @@
   "scripts": {
     "build:ts": "rm -rf ./src ./typings && npx tsc --project ./",
     "build:rollup": "rm -rf ./lib && npx rollup --config rollup.config.js",
-    "prepublish": "npm run build",
-    "build": "npm run build:ts && npm run build:rollup"
+    "build": "npm run build:ts && npm run build:rollup",
+    "prepublish": "npm run build"
   },
   "bugs": {
     "url": "https://github.com/jsjzh/oishi/issues"
@@ -33,10 +34,10 @@
   "dependencies": {
     "@types/fs-extra": "^9.0.1",
     "@types/lodash": "^4.14.150",
-    "@types/request": "^2.48.4",
+    "axios": "^0.19.2",
     "fs-extra": "^9.0.0",
     "lodash": "^4.17.15",
-    "request": "^2.88.2",
+    "query-string": "^6.13.1",
     "tslib": "^2.0.0"
   },
   "gitHead": "df6127be6a60588ad15faaf6dd6a8b9d6a9c4588"
