fix: modify tsconfig.json

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "./src",
     "rootDir": "./core"
   },
-  "include": ["./core/**/*.ts", "./global.d.ts"]
+  "include": ["./core/**/*.ts"]
 }
