feat: 爬虫未发布到 npm,只在本地使用

--- a/packages/cli-crawler/tsconfig.json
+++ b/packages/cli-crawler/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./src",
     "rootDir": "./core"
   },
-  "include": ["./core/**/*.ts", "./global.d.ts"]
+  "include": ["./core/**/*.ts"]
 }
