--- a/packages/cli-crawler/package.json
+++ b/packages/cli-crawler/package.json
@@ -6,11 +6,11 @@
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
   "main": "",
-  "bin": {
-    "oishi-crawler": "bin/oishi-crawler.js",
-    "@oishi/cli-crawler": "bin/oishi-crawler.js"
-  },
   "types": "",
+  "bin": {
+    "oishi-crawler": "bin/index.js",
+    "@oishi/cli-crawler": "bin/index.js"
+  },
   "files": [
     "bin",
     "lib",
@@ -25,18 +25,30 @@
     "url": "git+https://github.com/jsjzh/oishi.git"
   },
   "scripts": {
-    "build:ts": "rm -rf ./src && npx tsc --project ./",
+    "build:ts": "rm -rf ./src ./typings && npx tsc --project ./",
     "build:rollup": "rm -rf ./lib && npx rollup --config rollup.config.js",
+    "build": "npm run build:ts && npm run build:rollup",
     "prepublish": "npm run build",
-    "build": "npm run build:ts && npm run build:rollup"
+    "test": "npm run test:food",
+    "test:food": "node bin/index.js food"
   },
   "bugs": {
     "url": "https://github.com/jsjzh/oishi/issues"
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@oishi/cli-core": "^0.0.39",
+    "@oishi/cli-core": "latest",
+    "@oishi/cli-shared": "latest",
+    "@oishi/oishi-shared": "latest",
+    "fs-extra": "^9.0.1",
+    "inquirer": "^7.2.0",
+    "tmp-promise": "^3.0.2",
     "tslib": "^2.0.0"
   },
-  "gitHead": "df6127be6a60588ad15faaf6dd6a8b9d6a9c4588"
+  "gitHead": "df6127be6a60588ad15faaf6dd6a8b9d6a9c4588",
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.1",
+    "@types/inquirer": "^6.5.0",
+    "@types/tmp": "^0.2.0"
+  }
 }
