--- a/packages/cli-crawler/package.json
+++ b/packages/cli-crawler/package.json
@@ -29,8 +29,10 @@
     "build:rollup": "rm -rf ./lib && npx rollup --config rollup.config.js",
     "build": "npm run build:ts && npm run build:rollup",
     "prepublish": "npm run build",
-    "test": "npm run test:food",
-    "test:food": "node bin/index.js food"
+    "test": "npm run test:cmdb",
+    "hello:world": "node bin/index.js hello:world king",
+    "test:food": "node bin/index.js bohe:food",
+    "test:cmdb": "node bin/index.js cmdb:application"
   },
   "bugs": {
     "url": "https://github.com/jsjzh/oishi/issues"
