init: 初始化 oishiJoi

--- a/packages/joi/package.json
+++ b/packages/joi/package.json
@@ -1,30 +1,37 @@
 {
   "name": "@oishi/joi",
-  "version": "1.0.0",
-  "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
+  "version": "0.0.0",
+  "description": "simple joi",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
-  "main": "lib/joi.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
+  "main": "lib/index.js",
+  "types": "index.d.ts",
   "files": [
-    "lib"
+    "lib",
+    "src",
+    "package.json",
+    "README.md"
   ],
   "publishConfig": {
-    "registry": "http://registry.npm.souche-inc.com/"
+    "access": "public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jsjzh/oishi.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "build:ts": "rm -rf ./src ./typings && npx tsc --project ./",
+    "build:rollup": "rm -rf ./lib && npx rollup --config rollup.config.js",
+    "build": "npm run build:ts && npm run build:rollup",
+    "prepublish": "npm run build",
+    "test": "node test/index.js"
   },
   "bugs": {
     "url": "https://github.com/jsjzh/oishi/issues"
   },
-  "homepage": "https://github.com/jsjzh/oishi#readme"
+  "homepage": "https://github.com/jsjzh/oishi#readme",
+  "dependencies": {
+    "@hapi/joi": "^17.1.1"
+  }
 }
