--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -38,6 +38,8 @@
     "@types/lodash": "^4.14.150",
     "@yarnpkg/lockfile": "^1.1.0",
     "axios": "^0.19.2",
+    "dayjs": "^1.9.7",
+    "es6-error": "^4.1.1",
     "fs-extra": "^9.0.0",
     "jsonp": "^0.2.1",
     "lodash": "^4.17.15",
