--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@oishi/shared",
-  "version": "1.1.0",
-  "description": "oishi 通用库，reset from @oishi/oishi-shared",
+  "version": "2.0.2",
+  "description": "browser and node 通用库",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
@@ -33,17 +33,13 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@types/fs-extra": "^9.0.1",
     "@types/jsonp": "^0.2.0",
     "@types/lodash": "^4.14.150",
-    "@yarnpkg/lockfile": "^1.1.0",
     "axios": "^0.19.2",
     "dayjs": "^1.9.7",
     "es6-error": "^4.1.1",
-    "fs-extra": "^9.0.0",
     "jsonp": "^0.2.1",
     "lodash": "^4.17.15",
-    "parse-package-name": "^0.1.0",
     "query-string": "^6.13.7",
     "tslib": "^2.0.0"
   }
