--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
   "devDependencies": {
-    "@oishi/bundle": "latest",
+    "@oishi/bundle": "^0.0.6",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^7.0.0",
