--- a/packages/node-shared/package.json
+++ b/packages/node-shared/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@oishi/oishi-shared",
-  "version": "1.0.7",
-  "description": "oishi 通用库",
+  "name": "@oishi/node-shared",
+  "version": "0.0.1",
+  "description": "node 工具类库",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
@@ -34,14 +34,10 @@
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
     "@types/fs-extra": "^9.0.1",
-    "@types/lodash": "^4.14.150",
     "@yarnpkg/lockfile": "^1.1.0",
-    "axios": "^0.19.2",
+    "dayjs": "^1.9.7",
     "fs-extra": "^9.0.0",
-    "lodash": "^4.17.15",
     "parse-package-name": "^0.1.0",
-    "query-string": "^6.13.1",
     "tslib": "^2.0.0"
-  },
-  "gitHead": "df6127be6a60588ad15faaf6dd6a8b9d6a9c4588"
+  }
 }
