--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -30,7 +30,7 @@
     "build:rollup": "rm -rf ./lib && npx rollup --config rollup.config.js",
     "prepublish": "npm run build",
     "build": "npm run build:ts && npm run build:rollup",
-    "test": "npm run test:create-cli",
+    "test": "npm run test:parse-dep",
     "test:parse-dep": "node bin/oishi.js parse:dep",
     "test:create-ts": "node bin/oishi.js create ts demo-ts --skip-install",
     "test:create-cli": "node bin/oishi.js create cli demo-cli --skip-install"
@@ -42,11 +42,9 @@
   "dependencies": {
     "@oishi/cli-core": "latest",
     "@oishi/cli-shared": "latest",
-    "@oishi/oishi-shared": "latest",
-    "@yarnpkg/lockfile": "^1.1.0",
+    "@oishi/node-shared": "^2.0.1",
     "execa": "^4.0.0",
     "fs-extra": "^9.0.0",
-    "parse-package-name": "^0.1.0",
     "tmp-promise": "^3.0.2",
     "tslib": "^2.0.0",
     "validate-npm-package-name": "^3.0.0"
