--- a/packages/cli-sotck/package.json
+++ b/packages/cli-sotck/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oishi/cli-sotck",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "股票交易策略",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
@@ -29,10 +29,10 @@
     "@oishi/cli-core": "latest",
     "@oishi/cli-shared": "latest",
     "@oishi/oishi-shared": "latest",
-    "tslib": "^2.0.0",
     "fs-extra": "^9.0.1",
     "inquirer": "^7.2.0",
-    "tmp-promise": "^3.0.2"
+    "tmp-promise": "^3.0.2",
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
