--- a/packages/cli-sotck/package.json
+++ b/packages/cli-sotck/package.json
@@ -38,5 +38,6 @@
     "@types/fs-extra": "^9.0.1",
     "@types/inquirer": "^6.5.0",
     "@types/tmp": "^0.2.0"
-  }
+  },
+  "gitHead": "e1ac9caa68c409564c7ea1a1a537205de93013d2"
 }
