--- a/packages/bundle/package.json
+++ b/packages/bundle/package.json
@@ -40,5 +40,6 @@
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-terser": "^5.3.0",
     "tslib": "^2.0.0"
-  }
+  },
+  "gitHead": "e1ac9caa68c409564c7ea1a1a537205de93013d2"
 }
