--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -42,5 +42,6 @@
     "lodash": "^4.17.15",
     "query-string": "^6.13.7",
     "tslib": "^2.0.0"
-  }
+  },
+  "gitHead": "e1ac9caa68c409564c7ea1a1a537205de93013d2"
 }
