--- a/packages/browser-shared/package.json
+++ b/packages/browser-shared/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@oishi/shared",
-  "version": "2.0.11",
-  "description": "browser and node 通用库",
+  "name": "@oishi/browser-shared",
+  "version": "0.0.1",
+  "description": "browser 工具库",
   "keywords": [],
   "author": "jsjzh <kimimi_king@163.com>",
   "license": "ISC",
@@ -33,15 +33,8 @@
   },
   "homepage": "https://github.com/jsjzh/oishi#readme",
   "dependencies": {
-    "@types/jsonp": "^0.2.0",
-    "@types/lodash": "^4.14.150",
-    "axios": "^0.19.2",
-    "dayjs": "^1.9.7",
-    "es6-error": "^4.1.1",
-    "jsonp": "^0.2.1",
-    "lodash": "^4.17.15",
-    "query-string": "^6.13.7",
-    "tslib": "^2.0.0"
+    "@oishi/shared": "^2.0.11",
+    "dayjs": "^1.9.7"
   },
   "gitHead": "e1ac9caa68c409564c7ea1a1a537205de93013d2"
 }
